--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,15 @@ h3 {
     font-weight: bold;
 }
 
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
 img {
     width: 100%;
     object-fit: cover;
